GTUIX-170: more sidenav feed style adjustments - fix hiding on smaller devices

--- a/dashboard/src/core/styles/modules/view.scss
+++ b/dashboard/src/core/styles/modules/view.scss
@@ -99,6 +99,7 @@
   width: 100%;
   bottom: 0;
   position: fixed;
+  overflow: hidden;
 
   @include helper--media($breakpoint--medium) {
     width: 3em;
@@ -106,6 +107,7 @@
     height: 100%;
     position: relative;
     vertical-align: top;
+    overflow: visible;
   }
 }
 
